# jpi

./: .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: gen_ref_pages.py  index.md
docs/user-guide/: installation.md
examples/: allgather.py  allreduce_grads.py  batched_computation.py  bcast.py  blocks.py  gather.py  intro_example.py  test_bcast.py  test_reduce.py  test_scatter.py
reference/SUMMARY/: index.html
reference/jpi/: index.html
reference/jpi/allgather/: index.html
reference/jpi/allreduce/: index.html
reference/jpi/barrier/: index.html
reference/jpi/bcast/: index.html
reference/jpi/comm/: index.html
reference/jpi/gather/: index.html
reference/jpi/interface/: index.html
reference/jpi/interface/allgather/: index.html
reference/jpi/interface/allreduce/: index.html
reference/jpi/interface/barrier/: index.html
reference/jpi/interface/bcast/: index.html
reference/jpi/interface/token/: index.html
reference/jpi/op/: index.html
reference/jpi/recv/: index.html
reference/jpi/scatter/: index.html
reference/jpi/send/: index.html
reference/jpi/token/: index.html
search/: search_index.json
src/jpi/: __init__.py  allgather.py  allreduce.py  backend.pyi  barrier.py  bcast.py  comm.py  gather.py  jax_compat.py  mpi.py  op.py  recv.py  scatter.py  send.py  testing_utils.py  token.py  utils.py
src/jpi/_csr/: __init__.py  _csr_spmm.py
src/jpi/backend/: allgather.h  allreduce.h  barrier.h  bcast.cc  bcast.h  csr_spmm.cc  csr_spmm.h  gather.h  module.cc  recv.h  reduce.h  scatter.h  send.h  utils.h
src/jpi/interface/: __init__.py  allgather.py  allreduce.py  barrier.py  bcast.py  reduce.py  scatter.py  token.py
tests/: __init__.py  conftest.py  test_allgather.py  test_allreduce.py  test_barrier.py  test_bcast.py  test_gather.py  test_reduce.py  test_scatter.py
tests/unit/: test_allgather.py  test_allreduce.py  test_barrier.py  test_bcast.py  test_gather.py  test_scatter.py  test_send_and_recv.py
