[project]
name = "jpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ellingsvee", email = "elling.svee@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "jax>=0.7.2",
    "mpi4py>=4.1.0",
    "nanobind>=2.9.2",
]

[project.scripts]
sparsejax = "jpi:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind", "jax"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mpi>=0.6",
    "ruff>=0.13.0",
]
docs = [
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.21",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=0.30.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
